# clip-detectors

./: README.md  infer.py  pyproject.toml  requirements.txt  train.py
brandsafety/: __init__.py  api.py  artifact.py  artifacts.py  artifacts_io.py  binary.py  data.py  metrics.py  multiclass.py  split.py
src/deepsee_legacy_svm/: __init__.py  binary.py  io.py  multiclass.py
