[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brandsafety-svm"
version = "0.1.0"
description = "Minimal SVM+calibration training & inference for brand-safety classifiers from precomputed embeddings."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3"
]

[project.optional-dependencies]
parquet = ["pyarrow>=14.0"]

[tool.setuptools]
packages = ["brandsafety"]
